<resources>
    <string name="app_name">Money Planner</string>
    <!--Navigation drawer-->
    <string name="title_section_totals">Totals</string>
    <string name="title_section_accounts">Accounts</string>
    <string name="title_section_incomes">Incomes</string>
    <string name="title_section_outcomes">Expenses</string>
    <string name="title_section_about">About app</string>
    <string-array name="views_array">
        <item>Totals</item>
        <item>Accounts</item>
        <item>Incomes</item>
        <item>Expenses</item>
        <item>About</item>
    </string-array>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <!--Actions-->
    <string name="add_income_item">Add</string>
    <string name="delete_income_item">Delete</string>
    <string name="add_income_item_confirm">Save</string>

    <string name="action_settings">Settings</string>

    <!--Budget item fields-->
    <string name="budget_item_name">Name</string>
    <string name="budget_item_type">Type</string>
    <string-array name="budget_item_types">
        <item>Single</item>
        <item>Periodic</item>
    </string-array>
    <string name="budget_item_amount">Amount</string>
    <string name="budget_item_single_date">Date</string>
    <string name="budget_item_begin_date">Begin date</string>
    <string name="budget_item_end_date">End date</string>
    <string name="budget_item_begin_date_short">from</string>
    <string name="budget_item_end_date_short">to</string>
    <string name="budget_item_period">Period</string>
    <string name="budget_items_no_data_found">No data found</string>
    <string-array name="budget_item_period_items">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <!--Budget item tabs-->
    <string-array name="budget_item_tabs">
        <item>Periodic</item>
        <item>All</item>
        <item>Single</item>
    </string-array>
    <!--Totals fields-->
    <string name="total_begin_type">Calculate</string>
    <string name="total_begin_date_title">Begin date</string>
    <string name="total_calculate_date_title">Settlement date</string>
    <string-array name="total_begin_types">
        <item>for all time</item>
        <item>from specified date</item>
    </string-array>
    <!--Total result fields-->
    <string name="total_values_title">Total:</string>
    <string name="total_value_accounts_title">Accounts:</string>
    <string name="total_value_incomes_title">Incomes:</string>
    <string name="total_value_outcomes_title">Expenses:</string>
    <string name="total_value_totals_title">Total amount:</string>

    <!--Buttons-->
    <string name="btn_calc_totals_name">Calculate</string>

    <!--User messages-->
    <string name="msg_budget_item_empty_name">The name is not specified!</string>
    <string name="msg_budget_item_empty_amount">The amount is not specified!</string>
    <string name="msg_budget_item_wrong_dates">The begin date is greater than the end date</string>
    <string name="msg_budget_item_success">Done</string>
    <string name="msg_no_data_found">No data for this period</string>

    <!--How to fragment-->
    <string name="about_description">
        <![CDATA[
<p><b> Money Planner </b> allows you to specify the amount of money you will have at any time.</p>
<p>Just specify your periodic <b> Incomes </b> (salary, quarterly bonus, rental income from property, etc.) and <b> Expenses </b> (rent, mortgage, school fees, etc.). Also you need to specify the means you already have (bank account, cash, etc.) in the <b>Accounts</b>.</p>
<p>To obtain more accurate results, as well as monitoring of your finances, add <b>single</b> incomes and expenses after each transaction with the money.</p>
<p>It is very important for the correct calculation of the final amount to indicate actual values in the <b>Accounts</b> before starting of the calculation!</p>
<p>All data that you enter are stored only on your phone and are not transferred to third parties!</p>
<p>Thank you for downloading of this application! We hope that it will be useful to you.</p>
<p align = "right"> <b> Money Planner 1.0 </b> </p>
        ]]>
    </string>
    <string name="action_example">Actions</string>

    <!--Ads banner (AdMob)-->
    <string name="banner_ad_unit_id">ca-app-pub-8817611329438279/8894266145</string>

</resources>
