<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_totals"
            android:icon="@mipmap/ic_totals"
            android:title="@string/title_section_totals" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@mipmap/ic_accounts"
            android:title="@string/title_section_accounts" />
        <item
            android:id="@+id/nav_incomes"
            android:icon="@mipmap/ic_incomes"
            android:title="@string/title_section_incomes" />
        <item
            android:id="@+id/nav_outcomes"
            android:icon="@mipmap/ic_outcomes"
            android:title="@string/title_section_outcomes" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/title_section_about" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>