<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_item_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/budget_item_name"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_item_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budget_item_name"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="16sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_item_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/budget_item_amount"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_item_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budget_item_amount"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textSize="16sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_item_type"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/sp_item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_single_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_item_single_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/budget_item_single_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_single_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_begin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_item_begin_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/budget_item_begin_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_begin_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_item_end_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/budget_item_end_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_item_end_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_period_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingTop="5dp"
                android:text="@string/budget_item_period" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_period_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="2"
                    android:maxLength="5"
                    android:paddingTop="16dp" />

                <Spinner
                    android:id="@+id/sp_period_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>

            <View style="@style/Divider" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>


